--- a/templates/layout/support.html
+++ b/templates/layout/support.html
@@ -455,7 +455,7 @@
                 <div class="tabs support-tabs">
                     <div class="tab active" data-tab="wazir">
                         <img
-                            src="{{ url_for('static', path='layout/assets/img/logo_non.png') }}"
+                            src="https://wazir.kg/static/logo_non.png"
                             alt="Wazir Logo"
                             class="h-10" alt="Wazir Logo" class="tab-icon">
                         <span style="margin-top: 6px;">Wazir</span>
