--- a/templates/layout/dashboard.html
+++ b/templates/layout/dashboard.html
@@ -182,43 +182,43 @@
     </p>
     
     <div class="action-buttons">
-        <a href="#" class="action-btn">
+        <a href="https://yandex.uz/maps/-/CHx8nJLq" target="_blank" class="action-btn">
             <img src="https://wazir.kg/board/maps_btn.png" alt="Карта">
         </a>
-        <a href="#" class="action-btn">
+        <a href="https://www.istockphoto.com/ru/search/2/image-film?phrase=%D0%BE%D1%88" target="_blank" class="action-btn">
             <img src="https://wazir.kg/board/photo_btn.png" alt="Фото/Видео">
         </a>
-        <a href="#" class="action-btn">
+        <a href="https://www.360cities.net/image/mountain-suleymanka" target="_blank" class="action-btn">
             <img src="https://wazir.kg/board/360.png" alt="360 - VR Тур">
         </a>
-        <a href="#" class="action-btn">
+        <a href="https://ru.wikipedia.org/wiki/Ош" target="_blank" class="action-btn">
             <img src="https://wazir.kg/board/wiki_btn.png" alt="Википедия">
         </a>
     </div>
     
     <div class="mx-auto" style="background-color: #fff; padding: 0 10px;">
         <div class="grid grid-cols-2 gap-1">
-            <a href="#" class="category-card" style="background-image: url('https://wazir.kg/board/location/1.png')">
+            <a href="https://ru.wikipedia.org/wiki/%D0%A1%D1%83%D0%BB%D0%B0%D0%B9%D0%BC%D0%B0%D0%BD-%D0%A2%D0%BE%D0%BE#" class="category-card" style="background-image: url('https://wazir.kg/board/location/1.png')">
                 <h3 class="category-title">Гора Сулайман - Тоо</h3>
             </a>
             
-            <a href="#" class="category-card" style="background-image: url('https://wazir.kg/board/location/2.png')">
+            <a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D0%BB%D1%8C-%D0%A3%D0%BD%D0%BA%D1%83%D1%80" class="category-card" style="background-image: url('https://wazir.kg/board/location/2.png')">
                 <h3 class="category-title">Пещера Кыр Чилтен Унукур</h3>
             </a>
             
-            <a href="#" class="category-card" style="background-image: url('https://wazir.kg/board/location/3.png')">
+            <a href="https://2gis.kg/osh/geo/70030076156231754" class="category-card" style="background-image: url('https://wazir.kg/board/location/3.png')">
                 <h3 class="category-title">Пещера Эшен</h3>
             </a>
             
-            <a href="#" class="category-card" style="background-image: url('https://wazir.kg/board/location/4.png')">
+            <a href="https://ru.wikipedia.org/wiki/%D0%A7%D0%B0%D0%BA%D0%BA%D0%B0-%D0%A2%D0%B0%D0%BC%D0%B0%D1%80" class="category-card" style="background-image: url('https://wazir.kg/board/location/4.png')">
                 <h3 class="category-title">Пещера Тамчы Томар</h3>
             </a>
             
-            <a href="#" class="category-card" style="background-image: url('https://wazir.kg/board/location/5.png')">
+            <a href="https://2gis.kg/osh/geo/70030076159321762" class="category-card" style="background-image: url('https://wazir.kg/board/location/5.png')">
                 <h3 class="category-title">Петроглифы железного века</h3>
             </a>
             
-            <a href="#" class="category-card" style="background-image: url('https://wazir.kg/board/location/6.png')">
+            <a href="https://www.paleo-tours.ru/gora-sulajman-too-v-kirgizii" class="category-card" style="background-image: url('https://wazir.kg/board/location/6.png')">
                 <h3 class="category-title">Мечеть "Тахты - Сулайман"</h3>
             </a>
         </div>
